<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">easyorderFYP</string>
    <string name="action_settings">View Your Order</string>
    <string name="view_products">View Products</string>
    <string name="scan_items">Scan Items</string>
    <string name="menu_settings">Settings</string>

    <!-- GCM -->
    <!-- <string name="error_config">Please set the %1$s constant and recompile the app</string>
    <string name="already_registered">Device is already registered on server</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s)</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s)</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s)</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string> -->
    <string name="eat_in">Eat In</string>
    <string name="take_away">Take Away</string>

    <!-- Manifest -->
    <string name="title_activity_main">Push Notifications</string>
    <string name="title_activity_download_menu_items">DownloadMenuItems</string>
    <string name="title_activity_eat_in">EatInActivity</string>
    <string name="title_activity_take_away">TakeAwayActivity</string>
    <string name="title_activity_Register_Activity">RegisterActivity</string>
    <string name="title_activity_scan_items">ScanItemsActivity</string>
    <string name="title_activity_order_submitted">OrderSubmitted</string>
    <string name="title_activity_easyorderERROR">ERROR</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_logged_out">LoggedOut</string>

    <!-- EasyOrder -->
    <string name="full_name">Full Name</string>
    <string name="pin">Pin</string>
    <string name="welcome_message">To start ordering first scan your table locator QR code on the table</string>
    <string name="welcome_header">Welcome to EasyOrder</string>
    <string name="welcome_message_main">Please choose an option below to start ordering food!</string>
    <string name="eat_in_instructions">Please scan your table QR locator code to begin ordering food!</string>
    <string name="register_login_txt">Please login! If you are a new user please register</string>
    <string name="scan_item">Scan Item</string>
    <string name="scan_code">Scan Code</string>
    <string name="table_number">Table Number</string>
    <string name="scan_instructions">To start ordering from the menu start scanning items! Your items will appear below!</string>
    <string name="quantity_dialog_title">How Many?</string>
    <string name="submit_order">Submit Order</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="order_empty_desc">You have to choose at least 1 item from the menu before you place an order</string>
    <string name="title_activity_receipt">Receipt</string>
    <string name="hello_world">Hello world!</string>
    <string name="your_order">Your Order</string>
    <string name="items">Items</string>
    <string name="title_activity_previous_orders">PreviousOrders</string>
    <string name ="previous_orders_txt">Your Previous Orders</string>

</resources>